[gd_scene load_steps=3 format=3 uid="uid://70txg0axhdwo"]

[ext_resource type="Script" path="res://prog52a.gd" id="1_mqkx4"]

[sub_resource type="LabelSettings" id="LabelSettings_6ttm2"]
font_size = 24

[node name="prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mqkx4")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 82.0
offset_top = 72.0
offset_right = 310.0
offset_bottom = 132.0
text = "length:"
label_settings = SubResource("LabelSettings_6ttm2")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 71.0
offset_top = 159.0
offset_right = 299.0
offset_bottom = 214.0
text = "width:"
label_settings = SubResource("LabelSettings_6ttm2")

[node name="lblout" type="Label" parent="."]
layout_mode = 0
offset_left = 644.0
offset_top = 62.0
offset_right = 1081.0
offset_bottom = 283.0
label_settings = SubResource("LabelSettings_6ttm2")

[node name="calc" type="Button" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 380.0
offset_right = 460.0
offset_bottom = 478.0
text = "calculate"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 378.0
offset_right = 759.0
offset_bottom = 476.0
text = "clear"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 790.0
offset_top = 379.0
offset_right = 1055.0
offset_bottom = 477.0
text = "exit"

[node name="txtlen" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 285.0
offset_top = 52.0
offset_right = 582.0
offset_bottom = 125.0

[node name="txtwid" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 140.0
offset_right = 585.0
offset_bottom = 219.0

[connection signal="pressed" from="calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
